--- a/translog/src/App.css
+++ b/translog/src/App.css
@@ -1,6 +1,5 @@
 body{
-  margin: 0;
-  font-family: sans-serif;
-  background-color: #eee;
-  
+    margin: 0;
+    font-family: sans-serif;
+    background-color: #b99595;
 }
