--- a/translogapp/src/App.css
+++ b/translogapp/src/App.css
@@ -1,5 +1,21 @@
-body{
+*{
+    padding: 0;
     margin: 0;
-    font-family: sans-serif;
-    background-color: #eee;
+    box-sizing: border-box;
+}
+
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #108592;
+    overflow: hidden;
+}
+
+.app{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column ;
 }
