--- a/translogapp/src/components/Header/header.css
+++ b/translogapp/src/components/Header/header.css
@@ -1,8 +1,27 @@
 header{
         display:flex;
+        align-items: center;
+        justify-content: space-around;
         width: 100%;
-        height: 64px;
-        justify-content: space-between;
-        z-index: 10;
+        height: 60px;
         background-color: #a5131300
+}
+
+.Logo{
+        text-decoration: none;
+        font-size: 30;
+        cursor: pointer;
+        color:#FFF;
+        font-weight: bold;
+}
+.LinkCadastro{
+        cursor: pointer;
+        background-color: #FFF;
+        padding: 5px 14px;
+        text-decoration: none;
+        color: black;
+        border-radius: 4px;
+        
+
+
 }
